--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,8 @@
   --underline-progress: 1;
 
   /* --theme-font: Smiley Sans; */
-  --theme-font: "方正兰亭黑 Medium", "黑体";
-  --theme-font-regular: "方正兰亭黑 Regular", "黑体";
+  --theme-font: Helvetica, "方正兰亭黑 Medium", "黑体";
+  --theme-font-regular: Helvetica, "方正兰亭黑 Regular", "黑体";
 
   --pink-bg: linear-gradient(
     90deg,
